--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         </activity>
         <activity android:name=".RegisterUser1Activity" android:theme="@style/AppTheme" android:screenOrientation="portrait"/>
         <activity android:name=".RegisterUser2Activity" android:theme="@style/AppTheme" android:screenOrientation="portrait"/>
+        <activity android:name=".SetupActivity" android:theme="@style/AppTheme" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
